--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=MultiCoreCRM
 
-spring.datasource.url=jdbc:postgresql://frrhdeiffkdszxfzmysv.supabase.co:5432/postgres?sslmode=require
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres?user=postgres.frrhdeiffkdszxfzmysv&password=Esd@123...///
+spring.datasource.username=postgres.frrhdeiffkdszxfzmysv
 spring.datasource.password=Esd@123...///
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
