--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,33 @@
 spring.application.name=MultiCoreCRM
 
-spring.datasource.url=jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres?user=postgres.frrhdeiffkdszxfzmysv&password=Esd@123...///
+spring.datasource.url=jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com:5432/postgres?user=postgres.frrhdeiffkdszxfzmysv&password=Esd@123...///&sslmode=require&prepareThreshold=0
 spring.datasource.username=postgres.frrhdeiffkdszxfzmysv
 spring.datasource.password=Esd@123...///
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+# Removed explicit dialect - let Hibernate auto-detect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=false
+spring.jpa.properties.hibernate.format_sql=false
+# Optimize connection usage - removed provider_disables_autocommit as it can cause transaction issues
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
 
-server.port=8081
+server.port=8080
 
+# Connection pool settings - optimized for Supabase
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.minimum-idle=1
-spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.leak-detection-threshold=60000
+spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.validation-timeout=5000
+spring.datasource.hikari.auto-commit=false
 
 # generated password babea86c-14b1-471a-8857-d8a148702873
 
